# fuels-bot

./: Cargo.toml  Forc.toml  LICENSE  README.md
tests/: harness.rs
