[package]
name = "fuels-bot"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["wimokn"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["full"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
